--- a/weather/Base.lproj/Main.storyboard
+++ b/weather/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,28 +17,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6f6-jk-796" userLabel="TextContainer">
-                                <rect key="frame" x="150" y="315" width="300" height="265"/>
-                                <color key="backgroundColor" red="0.21568627450980393" green="0.50196078431372548" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
-                            </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="rGP-sy-Ifx">
-                                <rect key="frame" x="150" y="20" width="300" height="265"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="rGP-sy-Ifx">
+                                <rect key="frame" x="150" y="40" width="300" height="197"/>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                             </imageView>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6f6-jk-796" userLabel="TextContainer">
+                                <rect key="frame" x="150" y="315" width="300" height="265"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Cupertino" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ctg-k4-Xuf">
+                                        <rect key="frame" x="79" y="75" width="92" height="68"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="150"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="150"/>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="28C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ro8-u9-xNX">
+                                        <rect key="frame" x="79" y="171" width="185" height="72"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="250"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="widthClass=compact">
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="250"/>
+                                        </variation>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.21568627450980393" green="0.50196078431372548" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Ctg-k4-Xuf" firstAttribute="width" secondItem="6f6-jk-796" secondAttribute="width" id="ARb-od-6Wu"/>
+                                    <constraint firstItem="ro8-u9-xNX" firstAttribute="width" secondItem="6f6-jk-796" secondAttribute="width" id="LPT-38-ewh"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PPw-RA-Wir"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6f6-jk-796" secondAttribute="bottom" id="Pim-Tl-tou"/>
-                            <constraint firstAttribute="trailing" secondItem="6f6-jk-796" secondAttribute="trailing" id="apU-q8-gyx"/>
-                            <constraint firstItem="6f6-jk-796" firstAttribute="top" secondItem="rGP-sy-Ifx" secondAttribute="bottom" constant="20" id="jdc-v9-6kS"/>
-                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="134" id="o9o-jP-1zT"/>
-                            <constraint firstItem="6f6-jk-796" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pdS-Js-Tgb"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="GX5-0B-Tf9"/>
+                            <constraint firstItem="6f6-jk-796" firstAttribute="top" secondItem="rGP-sy-Ifx" secondAttribute="bottom" constant="78" id="Ihg-ae-pkY"/>
+                            <constraint firstItem="6f6-jk-796" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MaN-x5-lrL"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uOA-02-6Ab"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="429"/>
         </scene>
     </scenes>
     <resources>
