--- a/weather/Base.lproj/Main.storyboard
+++ b/weather/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,23 +19,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cloud_small" translatesAutoresizingMaskIntoConstraints="NO" id="rGP-sy-Ifx">
-                                <rect key="frame" x="150" y="40" width="300" height="197"/>
+                                <rect key="frame" x="150" y="20" width="300" height="197"/>
                                 <rect key="contentStretch" x="1" y="1" width="1" height="1"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6f6-jk-796" userLabel="TextContainer">
-                                <rect key="frame" x="150" y="315" width="300" height="265"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6f6-jk-796" userLabel="TextContainer">
+                                <rect key="frame" x="0.0" y="237" width="600" height="363"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Cupertino" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ctg-k4-Xuf">
-                                        <rect key="frame" x="79" y="75" width="92" height="68"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cupertino" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ctg-k4-Xuf">
+                                        <rect key="frame" x="-7" y="10" width="614" height="177"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="150"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
-                                        <variation key="widthClass=compact">
+                                        <variation key="heightClass=compact">
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="150"/>
                                         </variation>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="28C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ro8-u9-xNX">
-                                        <rect key="frame" x="79" y="171" width="185" height="72"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="28C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ro8-u9-xNX">
+                                        <rect key="frame" x="71" y="61" width="459" height="292"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="250"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -45,18 +46,45 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.21568627450980393" green="0.50196078431372548" blue="0.72941176470588232" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Ctg-k4-Xuf" firstAttribute="width" secondItem="6f6-jk-796" secondAttribute="width" id="ARb-od-6Wu"/>
-                                    <constraint firstItem="ro8-u9-xNX" firstAttribute="width" secondItem="6f6-jk-796" secondAttribute="width" id="LPT-38-ewh"/>
+                                    <constraint firstItem="Ctg-k4-Xuf" firstAttribute="centerX" secondItem="6f6-jk-796" secondAttribute="centerX" id="JOa-3b-cAf"/>
+                                    <constraint firstAttribute="bottom" secondItem="ro8-u9-xNX" secondAttribute="bottom" constant="10" id="THP-PA-slw"/>
+                                    <constraint firstItem="ro8-u9-xNX" firstAttribute="centerX" secondItem="6f6-jk-796" secondAttribute="centerX" id="aVu-fu-NoU"/>
+                                    <constraint firstItem="Ctg-k4-Xuf" firstAttribute="top" secondItem="6f6-jk-796" secondAttribute="top" constant="10" id="gKh-bX-cH8"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.29019607843137252" green="0.6705882352941176" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="GX5-0B-Tf9"/>
-                            <constraint firstItem="6f6-jk-796" firstAttribute="top" secondItem="rGP-sy-Ifx" secondAttribute="bottom" constant="78" id="Ihg-ae-pkY"/>
-                            <constraint firstItem="6f6-jk-796" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MaN-x5-lrL"/>
-                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uOA-02-6Ab"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3S3-DV-2V0"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.45" id="5Rb-4A-aeA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6f6-jk-796" secondAttribute="bottom" id="PnO-Fp-NKP"/>
+                            <constraint firstItem="6f6-jk-796" firstAttribute="top" secondItem="rGP-sy-Ifx" secondAttribute="bottom" constant="20" id="Q4L-8h-ECA"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="XRg-T0-XfN"/>
+                            <constraint firstItem="6f6-jk-796" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="217" id="Zc3-qs-f9I"/>
+                            <constraint firstItem="6f6-jk-796" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dXj-j5-hku"/>
+                            <constraint firstAttribute="trailing" secondItem="6f6-jk-796" secondAttribute="trailing" id="mlQ-d2-HqI"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="150" id="uHQ-VV-GqC"/>
+                            <constraint firstItem="rGP-sy-Ifx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zE5-R4-OPN"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3S3-DV-2V0"/>
+                                <exclude reference="5Rb-4A-aeA"/>
+                                <exclude reference="uHQ-VV-GqC"/>
+                                <exclude reference="Zc3-qs-f9I"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="constraints">
+                                <include reference="3S3-DV-2V0"/>
+                                <include reference="5Rb-4A-aeA"/>
+                                <exclude reference="XRg-T0-XfN"/>
+                                <include reference="uHQ-VV-GqC"/>
+                                <exclude reference="zE5-R4-OPN"/>
+                                <exclude reference="Q4L-8h-ECA"/>
+                                <include reference="Zc3-qs-f9I"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
